--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clipboard": "^2.0.8",
     "cool-ascii-faces": "^1.3.4",
     "cross-env": "^5.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "greenlock-express": "^4.0.3",
@@ -42,6 +43,7 @@
     "smartwizard": "^4.4.1",
     "socket.io": "^2.4.1",
     "sortablejs": "^1.13.0",
+    "umzug": "^2.3.0",
     "vue-clipboard2": "^0.3.1",
     "vue-input-autowidth": "^1.0.11",
     "vue-multiselect": "^2.1.6",
